<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".CadastroActivity">


    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/cadastro_game"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/ivCadastrar"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:src="@drawable/no_image"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"/>

    <EditText
        android:id="@+id/nomeJogo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/nome_jogo"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivCadastrar"/>

    <EditText
        android:id="@+id/nomeProdutora"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Nome da produtora"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nomeJogo"/>

    <EditText
        android:id="@+id/nomeConsole"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/nome_console"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nomeProdutora"/>

    <EditText
        android:id="@+id/notaGame"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/nota_game"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nomeConsole"/>

    <Button
        android:id="@+id/btAdicionar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/adicionar"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/notaGame"/>
</androidx.constraintlayout.widget.ConstraintLayout>